// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withActivation no user 1`] = `
<div>
  activation steps: 
  undefined
</div>
`;

exports[`withActivation user, admin 1`] = `
<div>
  activation steps: 
  { steps:
   [ { id: 'ConnectedCodeHost',
       title: 'Add repositories',
       detail:
        'Configure Sourcegraph to talk to your code host and fetch a list of your repositories.' },
     { id: 'DidSearch', title: 'Search your code', detail: [Object] },
     { id: 'FoundReferences',
       title: 'Find some references',
       detail:
        'To find references of a token, navigate to a code file in one of your repositories, hover over a token to activate the tooltip, and then click "Find references".',
       onClick: [Function: onClick] },
     { id: 'EnabledSharing',
       title: 'Configure SSO or share with teammates',
       detail:
        'Configure a single-sign on (SSO) provider or have at least one other teammate sign up.',
       onClick: [Function: onClick] } ],
  completed: undefined,
  update: [Function],
  refetch: [Function] }
</div>
`;

exports[`withActivation user, non-admin 1`] = `
<div>
  activation steps: 
  { steps:
   [ { id: 'DidSearch', title: 'Search your code', detail: [Object] },
     { id: 'FoundReferences',
       title: 'Find some references',
       detail:
        'To find references of a token, navigate to a code file in one of your repositories, hover over a token to activate the tooltip, and then click "Find references".',
       onClick: [Function: onClick] } ],
  completed: undefined,
  update: [Function],
  refetch: [Function] }
</div>
`;
